core/crates/omegon/src/tui/snapshots/omegon__tui__snapshot_tests__snapshot_bootstrap_default.snap
---
source: crates/omegon/src/tui/snapshot_tests.rs
assertion_line: 241
expression: output
---

  Ω  Omegon

  no providers — /login to configure

  Git: unknown  Context: Compact  Thinking: Medium  Grade: B
