core/crates/omegon/src/tui/snapshots/omegon__tui__snapshot_tests__snapshot_context_selector.snap
---
source: core/crates/omegon/src/tui/snapshot_tests.rs
assertion_line: 670
expression: render_to_string(&terminal)
---

       ╭ Context Class ────────╮
       │● Compact (128k)       │
       │  Standard sessions    │
       │  Standard (272k)      │
       │  Extended analysis    │
       │  Extended (400k)      │
       │  Large codebase       │
       │  Massive (1M+)        │
       │  Massive context      │
       ╰───────────────────────╯
