core/crates/omegon/src/tui/snapshots/omegon__tui__snapshot_tests__snapshot_dashboard_empty.snap
---
source: core/crates/omegon/src/tui/snapshot_tests.rs
assertion_line: 188
expression: render_to_string(&terminal)
---
 Ω project idle
