core/crates/omegon/src/tui/snapshots/omegon__tui__snapshot_tests__snapshot_dashboard_with_focused_node.snap
---
source: core/crates/omegon/src/tui/snapshot_tests.rs
assertion_line: 209
expression: render_to_string(&terminal)
---
 Ω project focus auth-surface
