core/crates/omegon/src/tui/snapshots/omegon__tui__snapshot_tests__snapshot_dashboard_with_openspec_change.snap
---
source: core/crates/omegon/src/tui/snapshot_tests.rs
assertion_line: 226
expression: render_to_string(&terminal)
---
 Ω project OpenSpec 1 active 7/10
