core/crates/omegon/src/tui/snapshots/omegon__tui__snapshot_tests__snapshot_engine_fallback_and_instrument_panels.snap
---
source: core/crates/omegon/src/tui/snapshot_tests.rs
assertion_line: 504
expression: normalized
---
┌ inference ──────────────────────────────────────────────┐ ┌ tools ───────────────────────────────────────────────────┐
│========================+++********#%^^··················│ │▸ ▢ recall       220ms≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋│
│%%###%%%%%%###%%%%%%###%%%%%%###%%%%%%###%%%%%%###%%%%%%#│ │✗ ⌖ search       8.1s ≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋ │
│= conv + sys * mem # defs % hist ^ think                 │ │  > sh           1.2s ≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋  │
│↑ 800  ↓ 120  ⊙ 0%   ✦ 0  ◎ 0 recalled                   │ │                                                          │
│├─ project ⌗2440  ⠊⠉⠉⠉⠉⠑⠒⠒⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠒⠒⠒⠤⠤⣀│ │                                                          │
│├─ working ⌗8  ⠤⠉⠉⠉⠉⠑⠒⠒⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤│ │                                                          │
│└─ episodes ⌗45  ⠊⠉⠉⠉⠉⠒⠒⠒⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤│ │                                                          │
│                                                         │ │                                                          │
│                                                         │ │                                                          │
│                                                         │ │  3/3 active                                              │
└─────────────────────────────────────────────────────────┘ └──────────────────────────────────────────────────────────┘
