core/crates/omegon/src/tui/snapshots/omegon__tui__snapshot_tests__snapshot_footer_default.snap
---
source: core/crates/omegon/src/tui/snapshot_tests.rs
assertion_line: 285
expression: render_to_string(&terminal)
---
╭ context ───────────────────╮╭ model ─────────────────────╮╭ memory ────────────────────╮╭ system ────────────────────╮
│ usage unavailable          ││ ☁  · Compact usage n/a     ││ ⌗ 0                        ││                           │
│                            ││  · ○ api key               ││                            ││                            │
│                            ││                            ││                            ││                            │
╰────────────────────────────╯╰────────────────────────────╯╰────────────────────────────╯╰────────────────────────────╯
